Fixing actions alignment and adding more action elements

--- a/packages/components/src/horizontal-bar-list/stats-card.scss
+++ b/packages/components/src/horizontal-bar-list/stats-card.scss
@@ -37,8 +37,9 @@
 
 	.stats-card--footer {
 		font-weight: 600;
-		padding: $padding-outside $padding-outside 0;
+		margin: $padding-outside $padding-outside 0;
 		display: block;
+		color: var(--color-text);
 
 		&:visited {
 			color: $font-color;
